--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -2,7 +2,7 @@
 <!-- Header
 ================================================== -->
 <header class="navbar hidden-print">
-
+  <%= render "locales_select" %>
   <div class="container">
     <div class="navbar-header">
       <%= link_to(site.title, root_url, :class => "navbar-brand") %>
