--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -1,20 +1,73 @@
+$th-footer-height: 60px;
 @import "variables";
 @import "twitter/bootstrap/3.0.0.rc2/bootstrap";
- 
 @import "font-awesome";
+
+/* PATCHES
+-------------------------------------------------- */
+// We do not want focus
+// -------------------------
+a:focus,
+.btn:focus {
+  outline: 0;
+}
+::selection {
+	background-color: $brand-primary;
+	color: #ffffff;
+}
+// Gmap patches
+// -------------------------
+#map-canvas {
+  height: 400px;
+  img {
+    max-width: none;
+    vertical-align: middle;
+    border: 0;
+    -ms-interpolation-mode: bicubic;
+  }
+}
+/* STICKY FOOTER STYLES
+-------------------------------------------------- */
+
+html,
+body {
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by its height */
+  margin: 0 auto (-$th-footer-height);
+  /* Pad bottom by footer height */
+  padding: 0 0 $th-footer-height;
+}
+
+/* Set the fixed height of the footer here */
+footer {
+  height: $th-footer-height;
+  background-color: #fff;
+  overflow: hidden;
+}
+/* GLOBAL
+-------------------------------------------------- */
 a {
   @include transition(all 0.3s ease-in-out);
 }
+
+/* LAYOUT
+-------------------------------------------------- */
 body {
   background-image: asset-url("retina_wood.png", "image");
-  background-position: initial initial;
-  background-repeat: initial initial;
+  background-position: 0 0;
+  background-repeat: repeat repeat;
 }
 
-
-.main-content {
- // background-color: #fff;
-}
+/* TYPES
+-------------------------------------------------- */
 // Headings
 // -------------------------
 
@@ -22,7 +75,29 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: $brand-primary;
 }
-
+/* CUSTOMIZE THE FOOTER
+-------------------------------------------------- */
+// Uncollapse the nav
+footer .nav {
+  float: left;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  > li {
+    float: left;
+    > a {
+      padding-top: (($th-footer-height - $line-height-computed) / 2);
+      padding-bottom: (($th-footer-height - $line-height-computed) / 2);
+      font-size: $font-size-small - 2;
+      text-transform: uppercase;
+      &:hover,
+      &:focus {
+        background-color: transparent;
+        color: $brand-primary;
+      }
+    }
+  }
+}
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
@@ -33,13 +108,24 @@ h1, h2, h3, h4, h5, h6,
   @include center-block();
 }
 
-
 .carousel-inner > .item > img {
- min-width: 100%;
+  min-width: 100%;
 }
 
+// Toggles
+.carousel-control .icon-prev,
+.carousel-control .icon-next {
+  width:  90px;
+  height: 90px;
+  margin-top: -45px;
+  margin-left: -45px;
+  font-family: serif;
+  font-size: 90px;
+} 
+
+/* CUSTOMIZE THE NAVBAR
+-------------------------------------------------- */
 .navbar {
-  //background-color: transparent;
   margin-bottom: 0;
 }
 .navbar-brand {
@@ -51,75 +137,122 @@ h1, h2, h3, h4, h5, h6,
   letter-spacing: 1px;
   font-size: $font-size-base - 3;
 }
-/* Responsive
--------------------------------------------------- */
+
+#locales-menu {
+  position: absolute;
+  right: 0;
+  top: 0;
+  .nav > li > a { 
+    background-color: $brand-primary;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: $font-size-base - 5;
+    padding: 4px 8px;
+    &:hover,
+    &:focus {
+      background-color: lighten($brand-primary, 10%); 
+      color: white;
+    }
+  }
+}
+
+/* CUSTOMIZE ARTICLES
+-------------------------------------------------- */ 
+
 .article-body {
   background-color: #fff;
   padding-top: $line-height-computed * 3;
   padding-bottom: $line-height-computed * 3; 
   text-align: center;
-  p {
-    font-family: $font-family-serif;
-    font-size: 19px;
-    line-height: 32px;
-    font-weight: 400;
-    max-width: 500px;
-    @include center-block();
-  }
   
   h1 {
     margin-bottom: $line-height-computed * 3;
   }
 }
-#map-canvas {
-  height: 400px;
-  img {
-    max-width: none;
-    vertical-align: middle;
-    border: 0;
-    -ms-interpolation-mode: bicubic;
-  }
+.copy-text {
+  font-family: $font-family-serif;
+  font-size: 19px;
+  line-height: 32px;
+  font-weight: 400;
+  max-width: 600px;
+  @include center-block();
 }
+
 /* CONTACT STYLES
 -------------------------------------------------- */ 
 #contacts { 
   padding-top: $line-height-computed * 3;
   padding-bottom: $line-height-computed * 3;
+  
+  form {
+    margin-top: 2em;
+  }
 }
-input{color:#1a1a1a;font-weight: normal;}
-input[type="text"]{ margin-bottom: 15px;height:40px;}
-textarea{height:120px; resize: none;}	
-input[type="text"], textarea{padding:0.6em;width: 100%;outline: none;border: none;-webkit-border-radius:0px;box-shadow: none; color: #1a1a1a;}
-input[type="text"]:focus, textarea:focus{background: #e6e6e6; -webkit-transition: all 0.15s linear; -moz-transition: all 0.15s linear; transition: all 0.15s linear;}
 
+.form-control {
+  @include box-shadow(none); 
+  @include transition(all 0.4s ease-in-out); 
+  &:focus {
+    border-color: none;
+    outline: 0;
+    @include box-shadow(none);
+    background: #e6e6e6;
+  } 
+}
+input {
+  color:#1a1a1a;
+  font-weight: normal;
+}
+input[type="text"] { 
+  margin-bottom: 15px;height:40px;
+}
+textarea.form-control {
+  height:120px; 
+  resize: none;
+}
 
-#contacts .btn{width:100%;margin-top:1em; border-radius:0; border:none; background-color: $brand-primary; color: white;-webkit-transition: all 0.4s ease-in-out;-moz-transition: all 0.4s ease-in-out;-o-transition: all 0.4s ease-in-out;transition: all 0.4s ease-in-out;}
-#contacts .btn:hover{background-color: lighten($brand-primary, 10%); color: white;}
+#contacts .btn {
+  width:100%;
+  margin-top:1em; 
+  border-radius:0; 
+  border:none; 
+  background-color: $brand-primary; 
+  color: white;
+  text-transform: uppercase;
+  @include transition(all 0.4s ease-in-out);
+  &:hover {
+    background-color: lighten($brand-primary, 10%); 
+    color: white;
+  }
+}
 .formContainer{position: relative;}
 
 
 span.error,span.valid{position: absolute;top:0; right: 1em;}
 span.error, span.valid{ width:40px;height:40px; background-position:center center;background-size:20px; background-repeat: no-repeat;}
-span.error{background-image:url("../images/notifications/error.svg");}
-span.valid{background-image:url("../images/notifications/valid.svg");}
+span.error{background-image:image_path("notifications/error.svg");}
+span.valid{background-image:image_path("notifications/valid.svg");}
 
 .alert{display:none;border: 0; border-radius: 0; background-color:#ff3333; color: white;}
 .alert-success{background-color:#22b573; color: white;}
 
-/* Each Contact Info */
-
-.contact{margin-bottom: 1em;}
-
-.contact-info {margin-top:2em;}
-.contact-info p{margin-top: 1em;font-size: 1em;}
-.contact-info .icon a i{text-decoration: none;color:#f4594e;}
-.contact-info .icon a:hover i{color:black;}
-
-.contact-label{color:#999;font-size: 1.5em;font-family: 'Cabin', sans-serif;}
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
+// Scale up controls for tablets and up
+@media screen and (min-width: $screen-tablet) {
 
+  // Scale up the controls a smidge
+  .carousel-control .icon-prev,
+  .carousel-control .icon-next {
+    width:  90px;
+    height: 90px;
+    margin-top: -45px;
+    margin-left: -45px;
+    font-size: 90px;
+  }
+}
 
 @media (max-width: $grid-float-breakpoint) {
 
@@ -127,5 +260,11 @@ span.valid{background-image:url("../images/notifications/valid.svg");}
 @media (min-width: $grid-float-breakpoint + 1) {
   .navbar-nav {
     @include pull-right;
+  }
+  .carousel-control .icon-prev {
+    margin-left: -120px;
+  }
+  .carousel-control .icon-next {
+    margin-left: 30px;
   }
 }
