--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,11 +1,9 @@
 <footer>
-  <container>
-    <row>
-      <col12> 
-        <div class="col-lg-12"> 
-          <%= render_menu('pipe') %>
-        </div>
-      </col12>
-    </row>
-  </container>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12"> 
+        <%= render_menu('pipe') %>
+      </div>
+    </div>
+  </div>
 </footer>
