--- a/app/views/pages/localisation.html.erb
+++ b/app/views/pages/localisation.html.erb
@@ -1,13 +1,13 @@
 <% resource_cache(resource) do %>
   <article class="<%= resource_instance_name %>">
     <%= render "google_map" %>
-    <container>
-      <row>
+    <div class="container">
+      <div class="row">
         <div class="col-lg-12 article-body">
-          <%= render_page_title(resource.title) %>
-          <%= render_html_text(resource.body) %>
+          <%= render_page_title(resource.title) if resource.show_title_in_page %>
+          <%= render_copy_text(resource.body) %>
         </div>
-      </row>
-    </container>
+      </div>
+    </div>
 	</article>
 <% end %>
