--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,13 +1,11 @@
-<% resource_cache(resource) do %>
+<%# resource_cache(resource) do %>
   <article class="<%= resource_instance_name %>">
-    <%= render_slideshow_for(resource) %>
-    <container>
-      <row>
-        <div class="col-lg-12 article-body">
-          <%= render_page_title(resource.title) %>
-          <%= render_html_text(resource.body) %>
-        </div>
-      </row>
-    </container>
+    <%= render_slideshow_for(resource) %> 
+    <div class="row">
+      <div class="col-lg-12 article-body">
+        <%= render_page_title(resource.title) if resource.show_title_in_page %>
+        <%= render_copy_text(resource.body) %>
+      </div>
+    </div>
 	</article>
-<% end %>  
+<%# end %>  
