--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
       <%= yield %>
     </section>
     <section id="contacts">
-      <%= render "contact" %>
+      <%#= render "contact" %>
     </section> 
   </div>
   <%= render 'footer' %> 
