--- a/app/views/application/_contact.html.erb
+++ b/app/views/application/_contact.html.erb
@@ -20,7 +20,7 @@
           <textarea name="inquiry[message]" id="inquiry_message" rows="20" cols="30" class="form-control required" placeholder="<%= t('simple_form.labels.inquiry.message') %>"></textarea>
         </div>
         <div class="col-xs-12 formContainer">
-          <input type="hidden" name="submitted" id="submitted" class="button" value="SEND"><button id="submit" class="btn" type="submit"><%= t("gko.inquiry_submit") %></button>
+          <input type="hidden" name="submitted" id="submitted" class="button" value="SEND"><button id="submit" class="btn" type="submit"><%= t("gko.inquiry_send") %></button>
         </div>
         <div class="col-xs-12 formContainer">
           <p id="error" data-alert="" class="alert"><%= t("gko.inquiry_error") %></p>
