--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,3 +1,6 @@
+<% cache([site, I18n.locale, 'footer']) do %>
+<!-- Header
+================================================== -->
 <footer class="hidden-print">
   <div class="container">
     <div class="row">
@@ -12,4 +15,5 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> 
+<% end %>
