--- a/app/views/pages/localisation.html.erb
+++ b/app/views/pages/localisation.html.erb
@@ -1,4 +1,4 @@
-<%# resource_cache(resource) do %>
+<% resource_cache(resource) do %>
   <article class="<%= resource_instance_name %>">
     <%= render "google_map" %>
     <div class="container">
@@ -10,4 +10,4 @@
       </div>
     </div>
 	</article>
-<%# end %>
+<% end %>
