--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,4 +1,4 @@
-<%# cache([site, I18n.locale, 'header']) do %>
+<% cache([site, I18n.locale, 'header']) do %>
 <!-- Header
 ================================================== -->
 <header class="navbar navbar-default hidden-print">
@@ -18,4 +18,4 @@
     </nav>
   </div>
 </header>
-<%# end %>
+<% end %>
