--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,4 @@
-<%# resource_cache(resource) do %>
+<% resource_cache(resource) do %>
   <article class="<%= resource_instance_name %>">
     <%= render_slideshow_for(resource) %>
     <div class="article-body">
@@ -12,4 +12,4 @@
       </div>
     </div> 
 	</article>
-<%# end %>  
+<% end %>  
